--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.1/angular.min.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js"></script>
   </head>
@@ -10,20 +11,20 @@
   <body ng-app="guidebook">
 
     <div class="searcher" ng-controller="SearchController">
-        <div class="search-block">
+        <div class="search__block">
           <h3>Guidebook Public API Search</h3>
           <input type="text" placeholder="Search..." ng-change="performSearch()" ng-model="term" />
           <h5 ng-if="resultsTotal">Total Results: {{resultsTotal}}</h5>
         </div>
-        <ul class="search-results">
+        <ul class="search__results">
             <li ng-repeat="result in results">
-              <div class="result">
+              <div class="search__result">
                 <img ng-src="{{result.icon}}"/>
-                <div class="description">
+                <div class="search__result-description">
                   <p>{{result.name}}</p>
                   <p ng-if="result.startDate">Start: {{result.startDate | date}}</p>
                 </div>
-                <div class="venue-column">
+                <div class="search__result-venue">
                   <h5>Venue</h5> 
                   <p>{{result.venue.name}}</p>
                   <p>{{result.venue.street}}</p>
